# ros_pointcloud2

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.rst  Cargo.toml  LICENSE  LICENSE-MIT  README.md  package.xml
.github/workflows/: crates.yml  galactic_20.04.yml  nightly.yml  no_std.yml  noetic_20.04.yml  r2r_galactic.yml  r2r_humble.yml  r2r_humble_22.04.yml  r2r_iron.yml  r2r_jazzy.yml  rclrs_humble.yml  rclrs_iron.yml  rclrs_jazzy.yml  rclrs_rolling.yml  roslibrust.yml  roslibrust_noetic.yml  rosrust_noetic.yml  rosrust_noetic_20.04.yml  safe_drive_jazzy.yml  tests.yml  ubuntu.yml
benches/: roundtrip.rs
derive-test/: Cargo.toml
derive-test/tests/: derive_test.rs
examples/: custom_enum_field_filter.rs  custom_label_filter.rs  distance_filter.rs  rayon.rs  rayon_bench.rs  simple_distance_filter.rs
integration/: README.md
integration/docker/: Dockerfile_r2r_galactic  Dockerfile_r2r_humble  Dockerfile_r2r_iron  Dockerfile_r2r_jazzy  Dockerfile_rclrs_humble  Dockerfile_rclrs_jazzy  Dockerfile_rclrs_rolling  Dockerfile_ros1_noetic  Dockerfile_safe_drive_jazzy
integration/rclrs_tests/: Cargo.toml  rclrs.rs
integration/ros_integration_tests/: Cargo.toml  README.md
integration/ros_integration_tests/tests/: nalgebra_integration.rs  r2r.rs  rclrs.rs  ros2_jazzy_rkyv.rs  ros2_jazzy_serde.rs  rosrust.rs
integration/ros_pointcloud2_tests/: Cargo.toml  package.xml  rclrs.rs
integration/ros_pointcloud2_tests/tests/: rclrs_integration.rs  rclrs_test.bash
integration/roslibrust_tests/: Cargo.toml  README.md  build.rs  ros1.rs  ros2.rs
integration/scripts/: run-ros-tests-docker.sh  run-ros-tests-local.sh
integration/tests/: r2r_test.bash  rclrs_test.bash  safe_drive_test.bash  safe_drive_test.rs
ros_pointcloud2/: Cargo.toml
ros_pointcloud2/benches/: roundtrip.rs
ros_pointcloud2/ensure_no_std/: Cargo.toml
ros_pointcloud2/ensure_no_std/src/: main.rs
ros_pointcloud2/examples/: custom_enum_field_filter.rs  rayon_bench.rs  simple_distance_filter.rs
ros_pointcloud2/src/: iterator.rs  lib.rs  points.rs  prelude.rs  ros.rs  tests.rs
ros_pointcloud2/tests/: Dockerfile_r2r_galactic  Dockerfile_r2r_humble  Dockerfile_r2r_iron  Dockerfile_r2r_jazzy  Dockerfile_rclrs_humble  Dockerfile_rclrs_iron  Dockerfile_rclrs_jazzy  Dockerfile_safe_drive_jazzy  e2e_test.rs  r2r_msg_test.rs  r2r_test.bash  ros2-interfaces-jazzy_test.rs  rosrust_msg_test.rs  safe_drive_test.rs
rpcl2/: Cargo.toml
rpcl2-derive/: Cargo.toml  README.md
rpcl2-derive/src/: lib.rs
rpcl2/benches/: roundtrip.rs
rpcl2/examples/: custom_enum_field_filter.rs  rayon_bench.rs  simple_distance_filter.rs
rpcl2/src/: iterator.rs  lib.rs  points.rs  prelude.rs  ros.rs
rpcl2/tests/: Dockerfile_r2r_galactic  Dockerfile_r2r_iron  Dockerfile_rclrs_jazzy  e2e_test.rs  r2r_msg_test.rs  ros2-interfaces-jazzy_test.rs  rosrust_msg_test.rs
rpcl2_derive/: Cargo.toml
rpcl2_derive/src/: lib.rs
src/: convert.rs  iterator.rs  lib.rs  pcl_utils.rs  points.rs  prelude.rs  reader.rs  ros.rs  ros_types.rs  writer.rs
tests/: Dockerfile_r2r_galactic  Dockerfile_rclrs_humble  Dockerfile_rclrs_iron  Dockerfile_rclrs_jazzy  e2e_test.rs  r2r_msg_test.rs  r2r_test.bash  rclrs_msg_test.rs  rclrs_test.bash  rosrust_msg_test.rs
type-layout/: Cargo.toml
type-layout/src/: lib.rs
type-layout/type-layout-derive/: Cargo.toml
type-layout/type-layout-derive/src/: lib.rs
