<package format="3">
  <name>ros_pointcloud2_tests</name>
  <version>0.0.0</version>
  <description>Dummy package for linking messages in crate tests.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclrs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>