[package]
name = "ros_pointcloud2"
version = "0.6.0"
edition = "2021"
authors = ["Christopher Sieh <stelzo@steado.de>"]
description = "Customizable conversions for working with sensor_msgs/PointCloud2."
repository = "https://github.com/stelzo/ros_pointcloud2"
license = "MIT OR Apache-2.0"
keywords = ["ros", "pointcloud2", "pointcloud", "message"]
categories = [
    "science::robotics",
    "encoding",
    "data-structures",
    "api-bindings",
]
readme = "../README.md"
documentation = "https://docs.rs/ros_pointcloud2"
homepage = "https://github.com/stelzo/ros_pointcloud2"
exclude = [
    "**/.github/**",
    "**/tests/**",
    "**/examples/**",
    "**/benches/**",
    "**/target/**",
    "**/build/**",
    "**/dist/**",
    "**/docs/**",
    "**/doc/**",
    "**/ensure_no_std/**",
]
rust-version = "1.63"

[dependencies]
r2r = { version = "0.9", optional = true }
rayon = { version = "1", optional = true }
nalgebra = { version = "0.33", optional = true, default-features = false }
rpcl2-derive = { version = "0.3", optional = true, path = "../rpcl2-derive" }
memoffset = { version = "0.9", optional = true }

[dependencies.roslibrust]
git = "https://github.com/lucasw/roslibrust"
branch = "get_rx_msg_def_v0_12"
features = ["ros1"]
optional = true

[dependencies.roslibrust_util]
git = "https://github.com/lucasw/tf_roslibrust"
version = "0.2.0"
optional = true

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.0"

[[bench]]
name = "roundtrip"
harness = false
path = "benches/roundtrip.rs"

[features]
roslibrust_msg = ["dep:roslibrust", "dep:roslibrust_util"]
r2r_msg = ["dep:r2r"]
rayon = ["dep:rayon"]
derive = ["dep:rpcl2-derive", "dep:memoffset"]
nalgebra = ["dep:nalgebra"]
std = ["nalgebra/std"]

default = ["std"]

[package.metadata.docs.rs]
features = ["derive", "nalgebra", "rayon"]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
