[package]
name = "ros_pointcloud2"
version = "0.6.0"
edition = "2021"
authors = ["Christopher Sieh <stelzo@steado.de>"]
description = "Customizable conversions for working with sensor_msgs/PointCloud2."
repository = "https://github.com/stelzo/ros_pointcloud2"
license = "MIT OR Apache-2.0"
keywords = ["ros", "pointcloud2", "pointcloud", "message"]
categories = [
  "science::robotics",
  "encoding",
  "data-structures",
  "api-bindings",
]
readme = "../README.md"
documentation = "https://docs.rs/ros_pointcloud2"
homepage = "https://github.com/stelzo/ros_pointcloud2"
exclude = [
  "**/.github/**",
  "**/tests/**",
  "**/examples/**",
  "**/benches/**",
  "**/target/**",
  "**/build/**",
  "**/dist/**",
  "**/docs/**",
  "**/doc/**",
  "**/ensure_no_std/**",
]
rust-version = "1.77"

[dependencies]
rosrust_msg = { version = "0.1.8", optional = true }
rosrust = { version = "0.9.12", optional = true }
safe_drive = { version = "0.4", optional = true }
r2r = { version = "0.9", optional = true }
rayon = { version = "1", optional = true }
nalgebra = { version = "0.34", optional = true, default-features = false }
rpcl2-derive = { version = "0.4", optional = true, path = "../rpcl2-derive" }
serde = { version = "1.0", features = ["derive"], optional = true }
ros2-interfaces-jazzy-serde = { version = "0.0.4", features = [
  "sensor_msgs",
], optional = true }
ros2-interfaces-jazzy-rkyv = { version = "0.0.5", features = [
  "sensor_msgs",
], optional = true }

[dev-dependencies]
rand = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.0"

[[bench]]
name = "roundtrip"
harness = false
path = "benches/roundtrip.rs"

[features]
serde = ["dep:serde", "nalgebra/serde-serialize-no-std"]
rosrust_msg = ["dep:rosrust_msg", "dep:rosrust"]
r2r_msg = ["dep:r2r"]
# safe_drive_msg = ["dep:safe_drive"]
ros2-interfaces-jazzy-rkyv = ["dep:ros2-interfaces-jazzy-rkyv"]
ros2-interfaces-jazzy-serde = ["dep:ros2-interfaces-jazzy-serde"]
rayon = ["dep:rayon"]
derive = ["dep:rpcl2-derive"]
nalgebra = ["dep:nalgebra"]
std = ["nalgebra/std"]

default = ["std"]

[package.metadata.docs.rs]
features = ["derive", "nalgebra", "rayon", "serde"]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
