[package]
name = "ros_pointcloud2"
version = "1.0.0-rc.1"
edition = "2021"
authors = ["Christopher Sieh <stelzo@steado.de>"]
description = "Customizable conversions for working with sensor_msgs/PointCloud2."
repository = "https://github.com/stelzo/ros_pointcloud2"
license = "MIT OR Apache-2.0"
keywords = ["ros", "pointcloud2", "pointcloud", "message"]
categories = [
  "science::robotics",
  "encoding",
  "data-structures",
  "api-bindings",
]
readme = "../README.md"
documentation = "https://docs.rs/ros_pointcloud2"
homepage = "https://github.com/stelzo/ros_pointcloud2"
exclude = [
  "**/.github/**",
  "**/integration/**",
  "**/docker/**",
  "**/target/**",
  "**/build/**",
  "**/dist/**",
  "**/docs/**",
  "**/doc/**",
  "**/ensure_no_std/**",
]
rust-version = "1.87"

[dependencies]
rayon = { version = "1", optional = true }
rpcl2-derive = { version = "1.0.0-rc.1", optional = true, path = "../rpcl2-derive" }
serde = { version = "1", features = ["derive"], optional = true }
rkyv = { version = "0.8", optional = true }

[dev-dependencies]
rand = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.0"

[[bench]]
name = "roundtrip"
harness = false
path = "benches/roundtrip.rs"

[features]
rayon = ["dep:rayon"]
derive = ["dep:rpcl2-derive"]
rkyv = ["dep:rkyv", "std"]
serde = ["dep:serde"]
std = []
strict-type-check = []

default = ["std", "strict-type-check"]

[package.metadata.docs.rs]
features = ["derive", "rayon", "serde"]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
