[package]
name = "type-layout"
description = "Derivable trait to view the layout of a struct, useful for debugging."
version = "0.2.0"
edition = "2018"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
documentation = "https://docs.rs/type-layout"
homepage = "https://github.com/LPGhatguy/type-layout"
repository = "https://github.com/LPGhatguy/type-layout"
readme = "README.md"
keywords = ["layout", "struct", "type"]
license = "MIT OR Apache-2.0"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde1 = ["serde"]

[workspace]
members = ["type-layout-derive", "try-crate"]

[dependencies]
type-layout-derive = { version = "0.2.0", path = "type-layout-derive" }

memoffset = "0.5"
serde = { version = "1.0.116", features = ["derive"], optional = true }
