[package]
name = "ros_integration_tests"
version = "0.1.0"
edition = "2021"
authors = ["ros_pointcloud2 tests"]
description = "Integration tests for ros_pointcloud2 that require ROS client crates (optional features)."
repository = "https://github.com/stelzo/ros_pointcloud2"
license = "MIT OR Apache-2.0"
keywords = ["ros", "pointcloud2", "integration", "tests"]
categories = ["development-tools::testing"]

[dependencies]
ros_pointcloud2 = { path = "../../ros_pointcloud2" }
ros2-interfaces-jazzy-serde = { version = "0.0.4", features = [
  "sensor_msgs",
], optional = true }
ros2-interfaces-jazzy-rkyv = { version = "0.0.5", features = [
  "sensor_msgs",
], optional = true }
r2r = { version = "0.9", optional = true }
rclrs = { version = "0.6", optional = true }
rosrust = { version = "0.9.12", optional = true }
rosrust_msg = { version = "0.1.8", optional = true }
nalgebra = { version = "0.34", optional = true }

[features]
ros2-interfaces-jazzy-serde = ["dep:ros2-interfaces-jazzy-serde"]
ros2-interfaces-jazzy-rkyv = ["dep:ros2-interfaces-jazzy-rkyv"]
r2r = ["dep:r2r"]
rosrust = ["dep:rosrust", "dep:rosrust_msg"]
rclrs = ["dep:rclrs"]
nalgebra = ["dep:nalgebra"]

default = []
