[package]
name = "ros_pointcloud2_tests"
version = "0.1.0"
edition = "2021"
authors = ["ros_pointcloud2 tests"]
description = "Node-like test crate that depends on ros_pointcloud2 and rclrs (optional)."

[dependencies]
ros_pointcloud2 = { path = "../../ros_pointcloud2" }
rclrs = { version = "0.6", optional = true }
std_msgs = { version = "*", optional = true }
sensor_msgs = { version = "*", optional = true }
builtin_interfaces = { version = "*", optional = true }

[features]
rclrs = [
    "dep:rclrs",
    "dep:std_msgs",
    "dep:sensor_msgs",
    "dep:builtin_interfaces",
]

default = []

[[bin]]
name = "rclrs_tests"
path = "rclrs.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
