[package]
name = "type-layout-derive"
description = "Derive macro implementation for type-layout crate"
version = "0.2.0"
edition = "2018"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
homepage = "https://github.com/LPGhatguy/type-layout"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2"
quote = "1.0.7"
proc-macro2 = "1.0.21"
